Exercice 2 seconds's Timer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
    
 </head>
 <body>
-    <script src="assets/js/scriptinit.js"></script>
+    <script src="assets/js/script2.js"></script>
 </body>
 </html>
