--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timesout-interval</title>
-   
+    <title><Whack-A-Mole></Whack-A-Mole></title>
+    <script defer src="assets/js/script3.js"></script>
+    <link type="text/css" rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
-    <script src="assets/js/scriptinit.js"></script>
+    
 </body>
 </html>
